<resources>
    <string name="app_name">My_dsu</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_favourite">Favourite</string>
    <string name="title_add_records">Add Records</string>
    <string name="title_search">Search</string>
    <string name="title_setting">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>