<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_dashboard" />
    <item
        android:id="@+id/navigation_favourites"
        android:icon="@drawable/ic_baseline_star_24"
        android:title="@string/title_starred" />
    <item
        android:id="@+id/navigation_add_records"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/title_add_records" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/title_setting" />

</menu>