<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">


    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.my_dsu.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_favourites"
        android:name="com.example.my_dsu.ui.favourites.FavouriteFragment"
        android:label="@string/title_favourite"
        tools:layout="@layout/fragment_favourite"
        />

    <fragment
        android:id="@+id/navigation_add_records"
        android:name="com.example.my_dsu.ui.addRecords.AddRecordFragment"
        android:label="@string/title_add_records"
        tools:layout="@layout/fragment_add_record" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.my_dsu.ui.notifications.NotificationsFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.my_dsu.ui.notifications.NotificationsFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_notifications" />
</navigation>